--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
     />
   </head>
   <body>
+    <header>
+      <div class="container">
+        <h1>Teste</h1>
+      </div>
+    </header>
   </body>
 </html>
