--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
     />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <h1>Teste</h1>
-      </div>
-    </header>
+    <div class="flex gap-1">
+      <a href="#" class="btn btn-sm">Label</a>
+      <a href="#" class="btn btn-md">Label</a>
+      <a href="#" class="btn btn-lg">Label</a>
+    </div>
+
+    <div class="flex gap-1">
+      <a aria-label="Label" href="#" class="btn btn-sm"></a>
+      <a aria-label="Label" href="#" class="btn btn-md"></a>
+      <a aria-label="Label" href="#" class="btn btn-lg"></a>
+    </div>
   </body>
 </html>
