--- a/index.html
+++ b/index.html
@@ -95,14 +95,16 @@
               preciso. Desafie-se, ganhe reconhecimento e comemore sua evolução!
             </p>
           </div>
-          <img class="desktop-only" src="assets/Tela 2.png" alt="">
+          <img class="desktop-only" src="assets/Tela 2.png" alt="" />
         </div>
 
         <div class="card py-lg px-lg">
           <img src="assets/icons/MicrophoneStage.svg" alt="" />
-          <h3>Grave suas performances </h3>
+          <h3>Grave suas performances</h3>
           <p>
-            Seja para compartilhar com os amigos ou para acompanhar sua evolução, nosso recurso de gravação de áudio e vídeo permite que você aproveite a experiência ao máximo! 
+            Seja para compartilhar com os amigos ou para acompanhar sua
+            evolução, nosso recurso de gravação de áudio e vídeo permite que
+            você aproveite a experiência ao máximo!
           </p>
         </div>
 
@@ -111,10 +113,11 @@
             <img src="assets/icons/UsersThree.svg" alt="" />
             <h3>Compartilhe com a comunidade</h3>
             <p>
-              Compartilhe suas gravações com a comunidade, interaja e explore a performance vocal de outras pessoas no seu feed!
+              Compartilhe suas gravações com a comunidade, interaja e explore a
+              performance vocal de outras pessoas no seu feed!
             </p>
           </div>
-          <img class="desktop-only" src="assets/Tela 1.png" alt="">
+          <img class="desktop-only" src="assets/Tela 1.png" alt="" />
         </div>
 
         <div class="card py-lg px-lg">
@@ -122,12 +125,13 @@
             <img src="assets/icons/MusicNotes.svg" alt="" />
             <h3>Letras em tempo-real</h3>
             <p>
-              Nunca perca o ritmo com as letras das músicas sincronizadas e exibidas em tempo real. Você também pode ativar a voz original da música para ajudar.
+              Nunca perca o ritmo com as letras das músicas sincronizadas e
+              exibidas em tempo real. Você também pode ativar a voz original da
+              música para ajudar.
             </p>
           </div>
-          <img class="desktop-only" src="assets/Tela 3.png" alt="">
+          <img class="desktop-only" src="assets/Tela 3.png" alt="" />
         </div>
-        
       </div>
     </section>
 
@@ -143,7 +147,11 @@
             <h3>Básico</h3>
             <p>Baixe o app e comece a cantar agora mesmo!</p>
             <zin-pricing>Grátis</zin-pricing>
-            <a href="#download" class="btn btn-md" aria-label="Baixar agora"></a>
+            <a
+              href="#download"
+              class="btn btn-md"
+              aria-label="Baixar agora"
+            ></a>
             <div class="separator"></div>
             <ul role="list" class="grid gap-1">
               <li>Com anúncios</li>
@@ -182,6 +190,39 @@
 
             <small>Mínimo de 4 pessoas no plano família.</small>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="download">
+      <div class="container py-xl">
+        <div class="card px-lg even-columns items-center">
+          <div>
+            <header>
+              <strong>download</strong>
+              <h2>Bora cantar?</h2>
+            </header>
+            <p>
+              Desperte seu potencial de estrela, liberte sua voz e faça parte
+              da comunidade musical mais envolvente. Baixe o Zingen agora e
+              transforme suas performances em experiências inesquecíveis!
+            </p>
+
+            <div class="buttons flex gap-1">
+              <a href="#">
+                <img src="assets/button-appstore.svg" alt="Baixar da Apple Store">
+              </a>
+              
+              <a href="#">
+                <img src="assets/button-playstore.svg" alt="Baixar da Play Store">
+              </a>
+            </div>
+          </div>
+
+          <img
+            src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png"
+            alt=""
+          />
         </div>
       </div>
     </section>
